@@ -1,5 +1,15 @@
 2003-03-13  Fumitoshi UKAI  <ukai@debian.or.jp>
 
+	* [w3m-dev 03819] support cd build && ../configure
+	* Makefile.in: add VPATH
+			add MV
+			use $(top_srcdir), $<, $@
+	* acinclude.m4 (AC_W3M_VERSION): use $srcdir
+	* configure.in (AC_W3M_VERSION): move
+	* mktable.c (main): basename
+
+2003-03-13  Fumitoshi UKAI  <ukai@debian.or.jp>
+
 	* Makefile.in (distclean): added
 
 2003-03-13  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
@@ -7511,4 +7521,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.790 2003/03/12 17:29:00 ukai Exp $
+$Id: ChangeLog,v 1.791 2003/03/12 18:27:03 ukai Exp $
